// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Menu DropMenu mutliple selectedKeys 2 1`] = `
.c0 {
  outline: none;
  margin: 0;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  padding-left: 0;
  list-style: none;
  height: 23.333333333333336em;
  max-height: 23.333333333333336em;
  overflow: hidden;
}

.c1 {
  box-sizing: border-box;
  position: relative;
  display: block;
  height: 2.916666666666667em;
  padding: 0.5833333333333334em 0.6666666666666667em;
  font-weight: 400;
  color: #333333;
  font-weight: 500;
  white-space: nowrap;
  cursor: pointer;
  overflow: hidden;
  text-overflow: ellipsis;
  -webkit-transition: background 0.3s ease;
  transition: background 0.3s ease;
}

.c1:hover {
  background-color: #edf0fe;
  font-weight: 900;
}

.c1::after {
  font-family: "sviconfont" !important;
  text-rendering: optimizeLegibility;
  content: "\\e73e";
  color: transparent;
  display: inline-block;
  font-size: 1.2rem;
  -webkit-transform: scale(.83333333) rotate(0deg);
  -ms-transform: scale(.83333333) rotate(0deg);
  transform: scale(.83333333) rotate(0deg);
  zoom: 1;
  -webkit-transition: all .2s ease;
  transition: all .2s ease;
  position: absolute;
  top: 50%;
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
  right: 0.8333333333333334em;
  font-weight: 700;
  text-shadow: 0 0.1px 0,0.1px 0 0,0 -0.1px 0,-0.1px 0;
}

.c1:hover:after {
  color: #d0c8c8;
}

.c2 {
  box-sizing: border-box;
  position: relative;
  display: block;
  height: 2.916666666666667em;
  padding: 0.5833333333333334em 0.6666666666666667em;
  font-weight: 400;
  color: #684fff;
  font-weight: 900;
  white-space: nowrap;
  cursor: pointer;
  overflow: hidden;
  text-overflow: ellipsis;
  -webkit-transition: background 0.3s ease;
  transition: background 0.3s ease;
}

.c2:hover {
  background-color: #edf0fe;
  font-weight: 900;
}

.c2::after {
  font-family: "sviconfont" !important;
  text-rendering: optimizeLegibility;
  content: "\\e73e";
  color: transparent;
  display: inline-block;
  font-size: 1.2rem;
  -webkit-transform: scale(.83333333) rotate(0deg);
  -ms-transform: scale(.83333333) rotate(0deg);
  transform: scale(.83333333) rotate(0deg);
  zoom: 1;
  -webkit-transition: all .2s ease;
  transition: all .2s ease;
  position: absolute;
  top: 50%;
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
  right: 0.8333333333333334em;
  font-weight: 700;
  text-shadow: 0 0.1px 0,0.1px 0 0,0 -0.1px 0,-0.1px 0;
}

.c2:after {
  color: #684fff;
}

.c2:hover:after {
  color: #684fff;
}

<ul
  className="c0"
>
  <li
    checked={false}
    className="c1"
    onClick={[Function]}
    title="a"
  >
    a
  </li>
  <li
    checked={false}
    className="c1"
    onClick={[Function]}
    title="b"
  >
    b
  </li>
  <li
    checked={true}
    className="c2"
    onClick={[Function]}
    title="c"
  >
    c
  </li>
  <li
    checked={true}
    className="c2"
    onClick={[Function]}
    title="d"
  >
    d
  </li>
</ul>
`;

exports[`Menu DropMenu single selectedKeys 2 1`] = `
.c0 {
  outline: none;
  margin: 0;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  padding-left: 0;
  list-style: none;
  height: 23.333333333333336em;
  max-height: 23.333333333333336em;
  overflow: hidden;
}

.c1 {
  box-sizing: border-box;
  position: relative;
  display: block;
  height: 2.916666666666667em;
  padding: 0.5833333333333334em 0.6666666666666667em;
  font-weight: 400;
  color: #333333;
  font-weight: 500;
  white-space: nowrap;
  cursor: pointer;
  overflow: hidden;
  text-overflow: ellipsis;
  -webkit-transition: background 0.3s ease;
  transition: background 0.3s ease;
}

.c1:hover {
  background-color: #edf0fe;
  font-weight: 900;
}

.c2 {
  box-sizing: border-box;
  position: relative;
  display: block;
  height: 2.916666666666667em;
  padding: 0.5833333333333334em 0.6666666666666667em;
  font-weight: 400;
  color: #684fff;
  font-weight: 900;
  white-space: nowrap;
  cursor: pointer;
  overflow: hidden;
  text-overflow: ellipsis;
  -webkit-transition: background 0.3s ease;
  transition: background 0.3s ease;
}

.c2:hover {
  background-color: #edf0fe;
  font-weight: 900;
}

<ul
  className="c0"
>
  <li
    checked={false}
    className="c1"
    onClick={[Function]}
    title="a"
  >
    a
  </li>
  <li
    checked={false}
    className="c1"
    onClick={[Function]}
    title="b"
  >
    b
  </li>
  <li
    checked={true}
    className="c2"
    onClick={[Function]}
    title="c"
  >
    c
  </li>
  <li
    checked={false}
    className="c1"
    onClick={[Function]}
    title="d"
  >
    d
  </li>
</ul>
`;

exports[`Menu DropMenu width: 500px height: 333px 1`] = `
.c0 {
  width: 45.833333333333336em;
  outline: none;
  margin: 0;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  padding-left: 0;
  list-style: none;
  height: 29.166666666666668em;
  max-height: 29.166666666666668em;
  overflow: hidden;
}

.c1 {
  box-sizing: border-box;
  position: relative;
  display: block;
  height: 2.916666666666667em;
  padding: 0.5833333333333334em 0.6666666666666667em;
  font-weight: 400;
  color: #333333;
  font-weight: 500;
  white-space: nowrap;
  cursor: pointer;
  overflow: hidden;
  text-overflow: ellipsis;
  -webkit-transition: background 0.3s ease;
  transition: background 0.3s ease;
}

.c1:hover {
  background-color: #edf0fe;
  font-weight: 900;
}

<span>
  <ul
    className="c0"
  >
    <li
      checked={false}
      className="c1"
      onClick={[Function]}
      title="a"
    >
      a
    </li>
    <li
      checked={false}
      className="c1"
      onClick={[Function]}
      title="b"
    >
      b
    </li>
    <li
      checked={false}
      className="c1"
      onClick={[Function]}
      title="c"
    >
      c
    </li>
    <li
      checked={false}
      className="c1"
      onClick={[Function]}
      title="d"
    >
      d
    </li>
  </ul>
</span>
`;

exports[`Menu children: items 1`] = `
.c3 {
  width: 16.666666666666668em;
  outline: none;
  margin: 0;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  padding-left: 0;
  list-style: none;
  height: 23.333333333333336em;
  max-height: 23.333333333333336em;
  overflow: hidden;
}

.c4 {
  box-sizing: border-box;
  position: relative;
  display: block;
  height: 2.916666666666667em;
  padding: 0.5833333333333334em 0.6666666666666667em;
  font-weight: 400;
  color: #333333;
  font-weight: 500;
  white-space: nowrap;
  cursor: pointer;
  overflow: hidden;
  text-overflow: ellipsis;
  -webkit-transition: background 0.3s ease;
  transition: background 0.3s ease;
}

.c4:hover {
  background-color: #edf0fe;
  font-weight: 900;
}

.c4::after {
  font-family: "sviconfont" !important;
  text-rendering: optimizeLegibility;
  content: "\\e73e";
  color: transparent;
  display: inline-block;
  font-size: 1.2rem;
  -webkit-transform: scale(.83333333) rotate(0deg);
  -ms-transform: scale(.83333333) rotate(0deg);
  transform: scale(.83333333) rotate(0deg);
  zoom: 1;
  -webkit-transition: all .2s ease;
  transition: all .2s ease;
  position: absolute;
  top: 50%;
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
  right: 0.8333333333333334em;
  font-weight: 700;
  text-shadow: 0 0.1px 0,0.1px 0 0,0 -0.1px 0,-0.1px 0;
}

.c4:hover:after {
  color: #d0c8c8;
}

.c1 {
  overflow: hidden;
  height: 20.833333333333336em;
  width: 16.666666666666668em;
  position: relative;
}

.c2 {
  height: 20.833333333333336em;
  width: 15.666666666666668em;
  position: absolute;
  display: inline-block;
}

.c0:hover .gaxbjm {
  opacity: 1;
}

.c5 {
  height: 20.833333333333336em;
  width: 15.666666666666668em;
  position: absolute;
  display: inline-block;
  left: 15.666666666666668em;
  width: 1em;
  opacity: 0;
  -webkit-transition: opacity 0.3s;
  transition: opacity 0.3s;
}

.c0:hover .c5 {
  opacity: 1;
}

.c6 {
  position: relative;
  background: #fbfbfb;
  width: 1.6666666666666667em;
  height: 25em;
  z-index: 996;
  width: 1em;
}

.c7 {
  position: absolute;
  top: 0;
  left: 0;
  cursor: pointer;
  text-align: center;
  border-radius: 0.6666666666666667em;
  background: #c2c2c2;
  color: #fff;
  font-size: 1.2rem;
  line-height: 2.5em;
  -webkit-transition: all 0.4s;
  transition: all 0.4s;
  width: 0.6666666666666667em;
  margin-left: 0.16666666666666669em;
  margin-right: 0.16666666666666669em;
}

.c7:hover {
  background-color: #7a7a7a;
}

<span>
  <div
    className="c0 c1"
    onWheel={[Function]}
  >
    <div
      className="c2"
    >
      <ul
        className="c3"
      >
        <li
          checked={false}
          className="c4"
          onClick={[Function]}
          title=""
        >
          0
        </li>
        <li
          checked={false}
          className="c4"
          onClick={[Function]}
          title=""
        >
          1
        </li>
        <li
          checked={false}
          className="c4"
          onClick={[Function]}
          title=""
        >
          2
        </li>
        <li
          checked={false}
          className="c4"
          onClick={[Function]}
          title=""
        >
          3
        </li>
        <li
          checked={false}
          className="c4"
          onClick={[Function]}
          title=""
        >
          4
        </li>
        <li
          checked={false}
          className="c4"
          onClick={[Function]}
          title=""
        >
          5
        </li>
        <li
          checked={false}
          className="c4"
          onClick={[Function]}
          title=""
        >
          6
        </li>
        <li
          checked={false}
          className="c4"
          onClick={[Function]}
          title=""
        >
          7
        </li>
      </ul>
    </div>
    <div
      className="c5"
    >
      <div
        className="c6"
        onMouseDown={[Function]}
        onMouseMove={[Function]}
        onMouseOut={[Function]}
        onMouseUp={[Function]}
        onWheel={[Function]}
        style={
          Object {
            "height": "20.833333333333336em",
          }
        }
      >
        <div
          className="c7"
          onMouseDown={[Function]}
          onMouseUp={[Function]}
          style={
            Object {
              "height": "14.916666666666666em",
              "top": "0em",
            }
          }
        />
      </div>
    </div>
  </div>
</span>
`;
